skeplib/tests/fixtures/parser/valid/break_continue.sk
fn main() -> Int {
  while (true) {
    continue;
    break;
  }
  return 0;
}
