skeplib/tests/fixtures/parser/invalid/struct_missing_field_colon.sk
struct User {
  id Int,
}

fn main() -> Int {
  return 0;
}
